# wordle-agent

./: .gitignore  README.md  pyproject.toml
tests/: test_wordle.py
wordlerl/: play.py
wordlerl/wordle/: core.py  interfaces.py  util.py  wordle.py
